Thread 챕터 5 스레드 제어 - 인터럽트, 생명 주기 2

--- a/src/proccessAndThread/프레세스와 스레드 소개.md
+++ b/src/proccessAndThread/프레세스와 스레드 소개.md
@@ -129,3 +129,38 @@ waiting과 같다.
 
 
 
+## interrupt
+- 스레드의 작업을 중지하고 싶다면 인터럽트를 사용
+- 바로 스레드의 작업이 멈추는 게 아니라 thread.sleep 처럼 인터럽트 예외를 발생시키는 코드가 실행될 떄 딱 멈춘다.
+
+### interrupt 사용방법
+- thread.interrupt() : 인터럽트 거는 법
+- thread.isInterrupted() : 인터럽트 상태
+### 인터럽트 상태
+- 대기상태의 스레드를 깨워 어떤 작업을 빠르게 할 수 있음
+- main 스레드에서 thread.isInterrupted() 결과값
+- main에서 인터럽트를 걸었으니 true로 된다.
+- 인터럽트 걸린 해당 스레드는 예외로 넘어가면 false로 됨
+
+## volatile
+- thread가 동시에 자원에 접근할 때 volatile 사용해야 안전함
+
+
+## yield
+자바의 스레드가 RUNNABLE 상태일 때, 운영체제의 스케줄링은 다음과 같은 상태들을 가질 수 있다.
+실행 상태(Running): 스레드가 CPU에서 실제로 실행 중이다.
+실행 대기 상태(Ready): 스레드가 실행될 준비가 되었지만, CPU가 바빠서 스케줄링 큐에서 대기 중이다.
+운영체제는 실행 상태의 스레드들을 잠깐만 실행하고 실행 대기 상태로 만든다. 그리고 실행 대기 상태의 스레드들을 잠
+깐만 실행 상태로 변경해서 실행한다. 이 과정을 계속 반복한다. 참고로 자바에서는 두 상태를 구분할 수는 없다.
+
+## yield()의 작동
+Thread.yield() 메서드는 현재 실행 중인 스레드가 자발적으로 CPU를 양보하여 다른 스레드가 실행될 수
+있도록 한다.
+yield() 메서드를 호출한 스레드는 RUNNABLE 상태를 유지하면서 CPU를 양보한다. 즉, 이 스레드는 다시 스
+케줄링 큐에 들어가면서 다른 스레드에게 CPU 사용 기회를 넘긴다.
+자바에서 Thread.yield() 메서드를 호출하면 현재 실행 중인 스레드가 CPU를 양보하도록 힌트를 준다. 이는 스레
+드가 자신에게 할당된 실행 시간을 포기하고 다른 스레드에게 실행 기회를 주도록 한다. 참고로 yield() 는 운영체제
+의 스케줄러에게 단지 힌트를 제공할 뿐, 강제적인 실행 순서를 지정하지 않는다. 그리고 반드시 다른 스레드가 실행되
+는 것도 아니다.
+yield() 는 RUNNABLE 상태를 유지하기 때문에, 쉽게 이야기해서 양보할 사람이 없다면 본인 스레드가 계속 실행될
+수 있다.
