Thread 챕터 6 : 스레드 메모리 가시성

--- a/src/proccessAndThread/프레세스와 스레드 소개.md
+++ b/src/proccessAndThread/프레세스와 스레드 소개.md
@@ -164,3 +164,22 @@ yield() 메서드를 호출한 스레드는 RUNNABLE 상태를 유지하면서 C
 는 것도 아니다.
 yield() 는 RUNNABLE 상태를 유지하기 때문에, 쉽게 이야기해서 양보할 사람이 없다면 본인 스레드가 계속 실행될
 수 있다.
+
+## 메모리 가시성 문제 (volatile)
+멀티스레드에서 메인 스레드에서 값을 변경해도 다른 스레드의 값이 일치하지 않는다.
+
+메모리 가시성 : 멀티스레드 환경에서 한 스레드가 변경한 값이 다른 스레드에서 언제 보이는지에 대한 것을 말한다.
+
+캐시 메모리의 값이 변경 되는 시점은 cpu가 관리하기 때문에 알 수 없다.
+주로 컨텍스트 스위칭이 일어날 때 된다고는 하는데 cpu 설계와 실행환경에 따라 다르기 때문에 정확한 시점은 알 수 없다.
+원인
+- 각 스레드 마다 메인 메모리가 아닌 캐쉬 메모리에서 값을 가져오기 때문에 값의 변경이 다른 스레드의 캐쉬 메모리에 반영이 되지 않는다.
+
+해결법
+- 메인 메모리에 직접 접근하면 됨 = volatile 사용
+- 또는 스레드 동기화 기법(synchronized, ReentrantLock)을 사용
+-> 성능이 떨어짐
+
+
+
+
