Thread 챕터 8 : concurrent lock

--- a/src/proccessAndThread/프레세스와 스레드 소개.md
+++ b/src/proccessAndThread/프레세스와 스레드 소개.md
@@ -223,3 +223,76 @@ tip
 - 공유 자원이 final이라면? synchronized 안해줘도 된다. 어처피 변경이 되지 않고 읽기 떄문이다.
 - 지역변수는 stack frame안에서 개별적으로 관리되기 떄문에 공유자원이 아니라서 동기화 문제에 신경 쓸 필요가 없다.
 
+# Concurrent.Lock
+
+## LockSupport
+
+LockSupport 를 활용하면, 무한 대기하지 않는 락 기능을 만들 수 있다.
+
+synchronized의 단점를 개선하고자 나옴
+- 무한 대기 : blocked 상태의 스레드는 락이 풀릴 떄 까지 무한히 대기한다.
+  - 특정 시간까지만 대기하는 타임아웃을 할 수 없다.
+  - 중간에 인터럽트를 실행시킬 수 없다.
+- 공정성 : 어떤 스레드가 어떤 락을 획득할지 알 수 없다.특정 스레드가 너무 오랜기간 락을 획득하지 못할 수 있다.
+
+## LockSupport의 기능
+
+
+- park() : 스레드의 waiting 상태로 변경한다
+- parkNanos(nanos) : 스레드를 나노초 동안만 timed_waiting 상태로 변경한다.
+  - 지정된 나노초 뒤에 TIMED_WAITING -> RUNNABLE로 변경됨
+- unpark(thread) : WAITING 상태의 대상 스레드를 RUNNABLE 상태로 변경한다.
+
+TIP
+- BLOCKED 상태는 synchronized 에서만 사용하는 특별한 대기 상태라고 이해하면 된다.
+- WAITING , TIMED_WAITING 상태는 범용적으로 활용할 수 있는 대기 상태라고 이해하면 된다.
+- BLOCKED 상태는 인터럽트가 걸려도 대기 상태를 빠져나오지 못한다. 여전히 BLOCKED 상태이다
+
+LockSupport 를 활용하면, 무한 대기하지 않는 락 기능을 만들 수 있다.
+
+```
+if (!lock.tryLock(10초)) { // 내부에서 parkNanos() 사용
+ log("[진입 실패] 너무 오래 대기했습니다.");
+ return false;
+}
+//임계 영역 시작
+...
+//임계 영역 종료
+lock.unlock() // 내부에서 unpark(
+```
+
+## LockSupport의 단점
+너무 저수준 이다.
+synchronized 처럼 고수준의 기능이 필요하다.
+자바에서 Lock 인터페이스와 ReentrantLock 이라는 구현체로 이런 기능들을 이미 다 구현해 두었다.
+ReentrantLock은 LockSupport를 활용해서 synchroized의 단점을 극복하면서도 매우 편리하게 임계 영역을 다룰 수 있는 다양한 기능을 제공한다.
+
+
+
+## locksupport 시간대기
+- parkNanos(nanos) : 스레드
+
+
+# ReentrantLock
+synchoronized의 blocked 상태를 통한 임계 영역 관리의 한계를 극복하고자,
+자바 1.5부터 Lock 인터페이스와 ReentrantLock 구현체를 제공한다.
+
+## Lock 인터페이스
+![img_1.png](img_1.png)
+void Lock()
+- 락을 획득한다. 만약 다른 스레드가 이미 락을 획득했다면, 락이 풀릴 떄 까지 현재 스레드는 대기watiing 한다.
+- 이메서드는 인터럽트에 응답하지 않는다.
+
+void lockInterruptibly()
+- 인터럽트 발생 시 락 획득을 포기한다.
+
+boolean tryLock()
+- 락 획득을 시도하고, 즉시 성공 여부를 반환한다.
+- 다른 스레드가 락을 획득했다면 false, 안했다면 true
+
+boolean tryLock(Long time, TimeUnit unit)
+- 주어진 시간 동안 락 획득을 시도한다.
+
+void unLock
+- 락을 해제한다. 락을 해제하면 락 획득을 대기 중인 스레드 중 하나가 락을 획득할 수 있게 된다.
+- 락을 획득한 스레드가 호출해야 하며, 그렇지 않으면 IllegalMonitorStateException이 발생할 수 있다.
